<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="TypographyDashes">
    <string name="app_name">BabyTime</string>
    <string name="facebook_app_id" translatable="false">326836307523571</string>
    <string name="ga_trackingId" translatable="false">UA-27175568-11</string>
    <string name="welcome_text">Test text to test data display on the screen of the mobile device</string>
    <string name="welcome_subtext">Test subtext to test data display on the screen of the mobile device</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="confirm_username">Confirm username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="type_your_email_here">Type your email here</string>
    <string name="restore_password">Restore password</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="email_is_not_registered">Email is not registered</string>
    <string name="your_password_was_sent_to_your_email">Your password was sent to your email</string>
    <string name="agree_to_newsletter">Agree to newsletter</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="password_must_contain_at_least_4_characters">Password must contain at least 4 characters</string>
    <string name="link_text"><u>link text</u></string>
    <string name="text"> text </string>
    <string name="positive_restore_message">We sent your password to your email</string>
    <string name="negative_restore_message">We couldn\'t identify your email</string>
    <string name="in_the_registration_process_agree_on">في عملية التسجيل الاتفاق على</string>
    <string name="terms_of_use"><u>شروط الاستخدام</u></string>
    <string name="and"> و </string>
    <string name="security_agreement"><u>الاتفاقية الأمنية</u></string>
    <string name="hello">Hello,</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="family_relation">Family relation</string>
    <string name="click_to_select_family_relation">click to select family relation</string>
    <string-array name="relations">
        <item>Mother</item>
        <item>Father</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Grandmother</item>
        <item>Grandfather</item>
        <item>Friend</item>
    </string-array>
    <string name="last_period_first_day">Last period</string>
    <string name="expected_birth_date">Expected birth date</string>
    <string name="birth_date">Birth date</string>
    <string name="date">Date</string>
    <string name="click_to_select_date">Click to select date…</string>
    <string name="type_child_name">Type child name…</string>
    <string name="add_child">Add child</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>
    <string name="please_select_date">Please, select date</string>
    <string name="please_select_correct_date">Please, select correct date</string>
    <string name="please_select_relation">Please, select family relation</string>
    <string name="birth_date_cant_be_in_future">Birth date can\'t be in future.</string>
    <string name="last_period_cant_be_in_future">Last period can\'t be in future.</string>
    <string name="expected_birth_date_cant_be_in_past">Expected birth date can\'t be in past.</string>
    <string name="last_period_description">Last period can\'t be in future.</string>
    <string name="expected_birth_date_description">Expected birth date can\'t be in past.</string>
    <string name="birth_date_description">Birth date can\'t be in future.</string>
    <string name="children_count">%1$d children</string>
    <string name="child_count">1 child</string>
    <string name="title_childs">Children</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_u_sure_u_want_to_delete_child">Are you sure you want to delete child?</string>
    <string name="item_id">item id</string>
    <string name="position_id">position id</string>
    <string name="in_app_notification_btn_back">back</string>
    <string name="in_app_notification_btn_next">next</string>
    <string name="profile_progress_text">days %1$d</string>
    <string name="notification_counters" translatable="false">%1$d/%2$d</string>
    <string name="notification_tip_title">Tip</string>
    <string name="week">%1$s week</string>
    <string name="month">%1$s month</string>
    <string name="dialog_notification_week_confirm">Yes, I did</string>
    <string name="dialog_notification_week_cancel">Not yet</string>
    <string name="age_in_week">Week %1$d</string>
    <string name="age_in_month">Age %1$d month</string>
    <string name="age_in_years">Age %1$d years</string>
    <string name="age_in_years_and_month">Age %1$d years %2$d month</string>
    <string name="tests">Tests</string>
    <string name="articles_count">Articles count</string>
    <string name="articles">Articles</string>
    <string name="album">Album</string>
    <string name="go_to_album">Go to album</string>
    <string name="no_photos">No photos</string>
    <string name="no_tests">No tests</string>
    <string name="no_articles">No articles</string>
    <string name="close">Close</string>
    <string name="n_tests">%1$d tests</string>
    <string name="title_home">Home</string>
    <string-array name="menu_item_titles">
        <item>My tests</item>
        <item>My Album</item>
        <item>Search doctor</item>
        <item>More articles</item>
        <item>Settings screen</item>
        <item>About</item>
        <item>Contact us</item>
    </string-array>
    <string-array name="menu_item_icons">
        <item>@drawable/ic_ad_1</item>
        <item>@drawable/ic_ad_2</item>
        <item>@drawable/ic_ad_3</item>
        <item>@drawable/ic_ad_4</item>
        <item>@drawable/ic_ad_5</item>
        <item>@drawable/ic_ad_6</item>
        <item>@drawable/ic_ad_7</item>
    </string-array>
    <string name="my_tests_title">My tests</string>
    <string name="read_more">Read more</string>
    <string name="search_doctor">Search doctor</string>
    <string name="add_reminder">Add reminder</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="done_test">Done test</string>
    <string name="undone_test">Undone test</string>
    <string name="reminder">Reminder</string>
    <string name="we_found_n_tests">We found (%1$d) tests</string>
    <string name="take_photo">Take photo</string>
    <string name="select_photo">Select photo</string>
    <string name="cancel">Cancel</string>
    <string name="album_title"><![CDATA[My <b>%1$s</b> album]]></string>
    <string name="album_empty_text">Album is empty</string>
    <string name="take_photo_button_title">photo</string>
    <string name="save">Save</string>
    <string name="add_new_photo_title">Add image</string>
    <string name="me">Me</string>
    <string name="add_tag">Add +</string>
    <string name="add">Add</string>
    <string name="country">Country</string>
    <string name="specialty">Speciality</string>
    <string name="doctor_name">Doctor name</string>
    <string name="search">Search</string>
    <string name="found_n_doctors">Showing %1$d out of total %2$d</string>
    <string name="no_doctors_found">No doctors found</string>
    <string name="turn_location_options">Please, turn on location options if you want to select your current place as default for search</string>
    <string name="error_search_doctor_title">Error title</string>
    <string name="error_search_doctor_text">Error text</string>
    <string name="any_country">Any country</string>
    <string name="any_city">Any city</string>
    <string name="any_speciality">Any speciality</string>
    <string-array name="countries">
        <item>Any country</item>
        <item>المملكة العربية السعودية</item>
        <item>مصر</item>
        <item>العراق</item>
        <item>الأردن</item>
        <item>الامارات العربية المتحدة</item>
        <item>الكويت</item>
        <item>فلسطين</item>
        <item>السودان</item>
        <item>الجزائر</item>
        <item>المغرب</item>
        <item>تونس</item>
        <item>البحرين</item>
        <item>لبنان</item>
        <item>سلطنة عمان</item>
        <item>قطر</item>
        <item>الصومال</item>
        <item>اليمن</item>
        <item>سوريا</item>
        <item>ليبيا</item>
        <item>جيبوتي</item>
        <item>موريتانيا</item>
        <item>جزر القمر</item>
    </string-array>
    <string-array name="iso_codes">
        <item>Any country</item>
        <item>SA</item>
        <item>EG</item>
        <item>IQ</item>
        <item>JO</item>
        <item>AE</item>
        <item>KW</item>
        <item>PS</item>
        <item>SD</item>
        <item>DZ</item>
        <item>MA</item>
        <item>TN</item>
        <item>BH</item>
        <item>LB</item>
        <item>OM</item>
        <item>QA</item>
        <item>SO</item>
        <item>YE</item>
        <item>SY</item>
        <item>LY</item>
        <item>DJ</item>
        <item>MR</item>
        <item>KM</item>
    </string-array>
    <string-array name="cities">
        <item>Cairo</item>
        <item>Baghdad</item>
        <item>Riyadh</item>
        <item>Jeddah</item>
        <item>Dammam</item>
        <item>Damascus</item>
        <item>Casablanca</item>
        <item>Aleppo</item>
        <item>Alexandria</item>
    </string-array>
    <string-array name="specialities">
        <item>Dermatologist</item>
        <item>Gynaecologist‎</item>
        <item>Endocrinologist</item>
        <item>Oncologist</item>
        <item>Venereologist</item>
        <item>Psychiatrist</item>
    </string-array>
    <string name="more_articles_title">More articles</string>
    <string name="we_found_n_articles">We found (%1$d) articles</string>
    <string name="showing_articles">(showing %1$d/%2$d) Articles</string>
    <string name="settings_title">Settings</string>
    <string name="settings_title_1">Settings title 1</string>
    <string name="profile_settings">Profile settings</string>
    <string name="weekly_tips_notifications">Weekly tips notifications</string>
    <string name="tests_reminders">Tests reminders</string>
    <string name="once_a_day">Once a day</string>
    <string name="once_time_only">Once time only</string>
    <string name="newsletter">Newsletter</string>
    <string name="my_profile">My profile</string>
    <string name="edit">Edit</string>
    <string name="reset_data">Reset data</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="about_title">About</string>
    <string name="about_app_version">1.1.0 application version</string>
    <string name="logo_text">logo text</string>
    <string name="about_text">Long about text with app description or other stuff. Long about text with app description or other stuff.</string>
    <string name="contact_us_title">Contact us</string>
    <string name="contact_us_title_hint">Title...</string>
    <string name="contact_us_text_hint">Message...</string>
    <string name="contact_us_btn_send">Send</string>
    <string name="your_message_was_sent">Your message was sent successfully</string>
    <string name="error_sending_message">Oops, we failed to send your message, please click close and retry</string>
    <string name="please_enter_title">Please enter title</string>
</resources>