<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="birth date"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/secondary_text" />

    <LinearLayout
        android:id="@+id/select_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_border"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/category_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/birth_date"
            android:textColor="@color/primary" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/category_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/expected_birth_date"
            android:textColor="@color/primary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/category_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/primary"
            android:textSize="@dimen/default_text_size"
            android:text="@string/last_period_first_day"
            android:textColor="@color/selected_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_select_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/select_category"
        android:layout_marginTop="20dp"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_dwn" />

        <TextView
            android:id="@+id/select_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/click_to_select_date"
            android:textColor="@color/button_text" />

        <!--<View-->
        <!--android:layout_width="2dp"-->
        <!--android:layout_height="46dp"-->
        <!--android:background="@color/primary" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/date"
            android:textColor="@color/button_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="visible"
        android:layout_below="@+id/container_select_date"
        android:layout_marginTop="10dp"
        android:textColor="@color/secondary_text"
        android:text="@string/last_period_description" />


    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

</RelativeLayout>