<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.sdex.webteb.view.TypefaceTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textColor="@color/action_bar_text_color"
            android:textSize="22sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="25dp">

        <EditText
            android:id="@+id/email"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/type_your_email_here"
            android:singleLine="true"
            android:textSize="@dimen/default_text_size"
            android:imeOptions="actionDone"
            android:textColorHint="@color/hint" />

        <com.sdex.webteb.view.TypefaceTextView
            android:id="@+id/indication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:text="@string/your_password_was_sent_to_your_email"
            android:textColor="@color/secondary_text"
            android:visibility="gone" />

        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/restore"
            android:layout_below="@+id/indication"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/restore_password" />

    </RelativeLayout>

</RelativeLayout>